// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a StatsCardContainer with interval 0 1`] = `
<div
  class="wrapper"
  data-testid="StatsCardContainer2"
>
  <div
    title="Total cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m47.66 27.114a8.715 8.715 0 0 1 -.695-2.858c-.631-11.371-9.665-20.833-21.165-21.242a22 22 0 0 0 -16.02 37.88 3.968 3.968 0 0 1 1.22 2.863v17.243h22v-6a1 1 0 0 1 1-1h2.193a4 4 0 0 0 3.328-1.781l2.443-3.664a1 1 0 0 0 -.833-1.555h-3.65a1 1 0 0 1 -.781-.375l-2.4-3a1 1 0 0 1 .781-1.625h8.919v-3a1 1 0 0 1 1-1h4.193a2 2 0 0 0 1.89-2.653z"
        fill="#9bc9ff"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m52.006 34.963-3.423-8.233a7.8 7.8 0 0 1 -.62-2.529c-.663-12.023-10.385-21.768-22.125-22.186a23 23 0 0 0 -16.747 39.6 2.989 2.989 0 0 1 .909 2.142v18.243h24v-7h2.192a4.99 4.99 0 0 0 4.161-2.227l2.447-3.664a2 2 0 0 0 -1.668-3.109h-3.651l-2.4-3h9.919v-4h4.193a3 3 0 0 0 2.813-4.037zm-2 1.618a.992.992 0 0 1 -.815.419h-4.191a2 2 0 0 0 -2 2v2h-7.919a2 2 0 0 0 -1.562 3.25l2.4 3a1.988 1.988 0 0 0 1.561.75h3.652l-2.444 3.665a3 3 0 0 1 -2.496 1.335h-2.192a2 2 0 0 0 -2 2v5h-20v-16.244a5 5 0 0 0 -1.524-3.584 21.006 21.006 0 0 1 -.057-30.285 20.782 20.782 0 0 1 15.349-5.873c10.715.381 19.588 9.3 20.2 20.3a9.745 9.745 0 0 0 .769 3.186l3.4 8.175a.994.994 0 0 1 -.129.906z"
        />
        <path
          d="m49 42h2v2h-2z"
        />
        <path
          d="m49 46h2v2h-2z"
        />
        <path
          d="m53 44h2v2h-2z"
        />
        <path
          d="m46 44h2v2h-2z"
        />
        <path
          d="m57 44h5v2h-5z"
        />
        <path
          d="m52.062 40.5h1.999v1.999h-1.999z"
          transform="matrix(.866 -.5 .5 .866 -13.642 32.101)"
        />
        <path
          d="m55.325 37.75h5v2h-5z"
          transform="matrix(.866 -.5 .5 .866 -11.627 34.098)"
        />
        <path
          d="m52.062 47.5h1.999v1.999h-1.999z"
          transform="matrix(.5 -.866 .866 .5 -15.475 70.193)"
        />
        <path
          d="m56.825 48.75h2v5h-2z"
          transform="matrix(.5 -.866 .866 .5 -15.471 75.703)"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
  <div
    title="Today's cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m3 32s19.611 15 29 15 29-15 29-15-19.611-15-29-15-29 15-29 15zm41 0a12 12 0 1 1 -12-12 12 12 0 0 1 12 12z"
        fill="#9bc9ff"
      />
      <circle
        cx="32"
        cy="32"
        fill="#9bc9ff"
        r="5"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m32 48c-9.617 0-28.8-14.585-29.607-15.206l-1.039-.794 1.039-.794c.807-.621 19.99-15.206 29.607-15.206s28.8 14.585 29.607 15.206l1.039.794-1.039.794c-.807.621-19.99 15.206-29.607 15.206zm-27.326-16c4.182 3.073 19.601 14 27.326 14s23.143-10.926 27.326-14c-4.182-3.073-19.601-14-27.326-14s-23.143 10.926-27.326 14z"
        />
        <path
          d="m32 45a13 13 0 1 1 13-13 13.015 13.015 0 0 1 -13 13zm0-24a11 11 0 1 0 11 11 11.013 11.013 0 0 0 -11-11z"
        />
        <path
          d="m31 2h2v8h-2z"
        />
        <path
          d="m12.615 9.615h2v8.001h-2z"
          transform="matrix(.707 -.707 .707 .707 -5.64 13.615)"
        />
        <path
          d="m9.615 49.385h8.001v2h-8.001z"
          transform="matrix(.707 -.707 .707 .707 -31.64 24.385)"
        />
        <path
          d="m31 54h2v8h-2z"
        />
        <path
          d="m49.385 46.385h2v8.001h-2z"
          transform="matrix(.707 -.707 .707 .707 -20.87 50.385)"
        />
        <path
          d="m46.385 12.615h8.001v2h-8.001z"
          transform="matrix(.707 -.707 .707 .707 5.13 39.615)"
        />
        <path
          d="m32 38a6 6 0 1 1 6-6 6.006 6.006 0 0 1 -6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0 -4-4z"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
  <div
    title="Critical cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 55h5a6 6 0 0 1 12 0h15v-30a4 4 0 0 0 -4-4h-28a4 4 0 0 0 -4 4v26a4 4 0 0 0 4 4zm6-21a1 1 0 0 1 1-1h4a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h4a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-4a1 1 0 0 0 -1 1v4a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1-1v-4a1 1 0 0 0 -1-1h-4a1 1 0 0 1 -1-1z"
        fill="#9bc9ff"
      />
      <path
        d="m39 55h5a6 6 0 0 1 12 0h3a2.006 2.006 0 0 0 2-2v-7a4 4 0 0 0 -4-4h-18z"
        fill="#9bc9ff"
      />
      <path
        d="m51.006 29.514a4 4 0 0 0 -3.714-2.514h-8.292v15h17z"
        fill="#9bc9ff"
      />
      <circle
        cx="18"
        cy="55"
        fill="#9bc9ff"
        r="2"
      />
      <circle
        cx="50"
        cy="55"
        fill="#9bc9ff"
        r="2"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m20 5h2v6h-2z"
        />
        <path
          d="m12.929 7.929h2v6h-2z"
          transform="matrix(.707 -.707 .707 .707 -3.648 13.049)"
        />
        <path
          d="m25.071 9.929h6v2h-6z"
          transform="matrix(.707 -.707 .707 .707 .494 23.05)"
        />
        <path
          d="m57 41h-.323l-4.742-11.856a4.976 4.976 0 0 0 -4.643-3.144h-7.292v-1a5.006 5.006 0 0 0 -5-5h-9v-1a5 5 0 0 0 -10 0v1h-9a5.006 5.006 0 0 0 -5 5v26a5.006 5.006 0 0 0 5 5h4.08a6.991 6.991 0 0 0 13.84 0h18.16a6.991 6.991 0 0 0 13.84 0h2.08a3 3 0 0 0 3-3v-7a5.006 5.006 0 0 0 -5-5zm-9.708-13a2.984 2.984 0 0 1 2.785 1.886l4.446 11.114h-14.523v-13zm-29.292-9a3 3 0 0 1 6 0v1h-6zm0 41a5 5 0 1 1 5-5 5.006 5.006 0 0 1 -5 5zm20-6h-13.08a6.991 6.991 0 0 0 -13.84 0h-4.08a3 3 0 0 1 -3-3v-26a3 3 0 0 1 3-3h28a3 3 0 0 1 3 3zm12 6a5 5 0 1 1 5-5 5.006 5.006 0 0 1 -5 5zm10-7a1 1 0 0 1 -1 1h-2.08a6.991 6.991 0 0 0 -13.84 0h-3.08v-11h17a3 3 0 0 1 3 3z"
        />
        <path
          d="m18 52a3 3 0 1 0 3 3 3 3 0 0 0 -3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1 -1 1z"
        />
        <path
          d="m50 52a3 3 0 1 0 3 3 3 3 0 0 0 -3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1 -1 1z"
        />
        <path
          d="m28 32h-4v-4a2 2 0 0 0 -2-2h-2a2 2 0 0 0 -2 2v4h-4a2 2 0 0 0 -2 2v2a2 2 0 0 0 2 2h4v4a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2v-4h4a2 2 0 0 0 2-2v-2a2 2 0 0 0 -2-2zm0 4h-4a2 2 0 0 0 -2 2v4h-2v-4a2 2 0 0 0 -2-2h-4v-2h4a2 2 0 0 0 2-2v-4h2v4a2 2 0 0 0 2 2h4z"
        />
        <path
          d="m41.5 31.5h5v1.999h-5z"
          transform="matrix(.8 -.6 .6 .8 -10.7 32.889)"
        />
        <path
          d="m41 34h10v1.999h-10z"
          transform="matrix(.8 -.6 .6 .8 -11.8 34.589)"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
  <div
    title="Recovered cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m56.749 42.607-10.607-10.607-14.142 14.142 10.607 10.607a10 10 0 0 0 14.142-14.142z"
        fill="#9bc9ff"
      />
      <path
        d="m21.393 7.251a10 10 0 0 0 -14.142 0 10 10 0 0 0 0 14.142l10.607 10.607 14.142-14.142z"
        fill="#9bc9ff"
      />
      <path
        d="m22 22h20v20h-20z"
        fill="#9bc9ff"
        transform="matrix(.707 -.707 .707 .707 -13.255 32)"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m47.557 32 9.9-9.9a11 11 0 0 0 -15.557-15.556l-9.9 9.9-9.9-9.9a11 11 0 0 0 -15.556 15.556l9.9 9.9-9.9 9.9a11 11 0 0 0 15.556 15.556l9.9-9.9 9.9 9.9a11 11 0 0 0 15.556-15.556zm-4.244-24.042a9 9 0 0 1 12.729 12.729l-9.9 9.9-12.728-12.729zm-35.355 12.729a9 9 0 0 1 12.729-12.729l9.9 9.9-12.729 12.728zm12.729 35.355a9 9 0 0 1 -12.729-12.729l9.9-9.9 12.728 12.729zm-1.415-24.042 12.728-12.728 12.728 12.728-12.728 12.728zm36.77 24.042a9 9 0 0 1 -12.729 0l-9.9-9.9 12.729-12.728 9.9 9.9a9.012 9.012 0 0 1 0 12.728z"
        />
        <path
          d="m9.08 13.322h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -7.175 11.322)"
        />
        <path
          d="m13.322 9.08h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -2.932 13.08)"
        />
        <path
          d="m11.908 16.151h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -8.347 14.151)"
        />
        <path
          d="m16.151 11.908h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -4.104 15.908)"
        />
        <path
          d="m14.736 18.979h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -9.518 16.979)"
        />
        <path
          d="m18.979 14.737h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -5.276 18.737)"
        />
        <path
          d="m17.565 21.808h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -10.69 19.808)"
        />
        <path
          d="m21.808 17.565h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -6.447 21.565)"
        />
        <path
          d="m48.678 9.08h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 7.423 38.08)"
        />
        <path
          d="m52.92 13.322h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 5.665 42.322)"
        />
        <path
          d="m45.85 11.908h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 4.594 36.908)"
        />
        <path
          d="m50.092 16.151h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 2.837 41.151)"
        />
        <path
          d="m43.021 14.737h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 1.762 35.729)"
        />
        <path
          d="m47.264 18.979h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 .005 39.971)"
        />
        <path
          d="m40.192 17.565h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -1.062 34.565)"
        />
        <path
          d="m44.435 21.807h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -2.814 38.824)"
        />
        <path
          d="m17.565 40.192h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -23.69 25.192)"
        />
        <path
          d="m21.808 44.435h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -25.447 29.435)"
        />
        <path
          d="m14.737 43.021h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -26.518 24.021)"
        />
        <path
          d="m18.979 47.263h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -28.276 28.263)"
        />
        <path
          d="m11.908 45.849h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -29.347 22.849)"
        />
        <path
          d="m16.151 50.092h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -31.104 27.092)"
        />
        <path
          d="m9.08 48.678h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -32.175 21.678)"
        />
        <path
          d="m13.322 52.921h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -33.933 25.92)"
        />
        <path
          d="m40.192 44.435h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -20.062 42.435)"
        />
        <path
          d="m44.435 40.192h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -15.821 44.171)"
        />
        <path
          d="m43.02 47.264h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -21.234 45.263)"
        />
        <path
          d="m47.264 43.021h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -16.991 47.021)"
        />
        <path
          d="m45.85 50.092h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -22.405 48.092)"
        />
        <path
          d="m50.092 45.849h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -18.163 49.849)"
        />
        <path
          d="m48.678 52.921h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -23.577 50.92)"
        />
        <path
          d="m52.92 48.678h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -19.335 52.677)"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
</div>
`;

exports[`renders a StatsCardContainer with interval 10 1`] = `
<div
  class="wrapper"
  data-testid="StatsCardContainer1"
>
  <div
    title="Total cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m47.66 27.114a8.715 8.715 0 0 1 -.695-2.858c-.631-11.371-9.665-20.833-21.165-21.242a22 22 0 0 0 -16.02 37.88 3.968 3.968 0 0 1 1.22 2.863v17.243h22v-6a1 1 0 0 1 1-1h2.193a4 4 0 0 0 3.328-1.781l2.443-3.664a1 1 0 0 0 -.833-1.555h-3.65a1 1 0 0 1 -.781-.375l-2.4-3a1 1 0 0 1 .781-1.625h8.919v-3a1 1 0 0 1 1-1h4.193a2 2 0 0 0 1.89-2.653z"
        fill="#9bc9ff"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m52.006 34.963-3.423-8.233a7.8 7.8 0 0 1 -.62-2.529c-.663-12.023-10.385-21.768-22.125-22.186a23 23 0 0 0 -16.747 39.6 2.989 2.989 0 0 1 .909 2.142v18.243h24v-7h2.192a4.99 4.99 0 0 0 4.161-2.227l2.447-3.664a2 2 0 0 0 -1.668-3.109h-3.651l-2.4-3h9.919v-4h4.193a3 3 0 0 0 2.813-4.037zm-2 1.618a.992.992 0 0 1 -.815.419h-4.191a2 2 0 0 0 -2 2v2h-7.919a2 2 0 0 0 -1.562 3.25l2.4 3a1.988 1.988 0 0 0 1.561.75h3.652l-2.444 3.665a3 3 0 0 1 -2.496 1.335h-2.192a2 2 0 0 0 -2 2v5h-20v-16.244a5 5 0 0 0 -1.524-3.584 21.006 21.006 0 0 1 -.057-30.285 20.782 20.782 0 0 1 15.349-5.873c10.715.381 19.588 9.3 20.2 20.3a9.745 9.745 0 0 0 .769 3.186l3.4 8.175a.994.994 0 0 1 -.129.906z"
        />
        <path
          d="m49 42h2v2h-2z"
        />
        <path
          d="m49 46h2v2h-2z"
        />
        <path
          d="m53 44h2v2h-2z"
        />
        <path
          d="m46 44h2v2h-2z"
        />
        <path
          d="m57 44h5v2h-5z"
        />
        <path
          d="m52.062 40.5h1.999v1.999h-1.999z"
          transform="matrix(.866 -.5 .5 .866 -13.642 32.101)"
        />
        <path
          d="m55.325 37.75h5v2h-5z"
          transform="matrix(.866 -.5 .5 .866 -11.627 34.098)"
        />
        <path
          d="m52.062 47.5h1.999v1.999h-1.999z"
          transform="matrix(.5 -.866 .866 .5 -15.475 70.193)"
        />
        <path
          d="m56.825 48.75h2v5h-2z"
          transform="matrix(.5 -.866 .866 .5 -15.471 75.703)"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
  <div
    title="Today's cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m3 32s19.611 15 29 15 29-15 29-15-19.611-15-29-15-29 15-29 15zm41 0a12 12 0 1 1 -12-12 12 12 0 0 1 12 12z"
        fill="#9bc9ff"
      />
      <circle
        cx="32"
        cy="32"
        fill="#9bc9ff"
        r="5"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m32 48c-9.617 0-28.8-14.585-29.607-15.206l-1.039-.794 1.039-.794c.807-.621 19.99-15.206 29.607-15.206s28.8 14.585 29.607 15.206l1.039.794-1.039.794c-.807.621-19.99 15.206-29.607 15.206zm-27.326-16c4.182 3.073 19.601 14 27.326 14s23.143-10.926 27.326-14c-4.182-3.073-19.601-14-27.326-14s-23.143 10.926-27.326 14z"
        />
        <path
          d="m32 45a13 13 0 1 1 13-13 13.015 13.015 0 0 1 -13 13zm0-24a11 11 0 1 0 11 11 11.013 11.013 0 0 0 -11-11z"
        />
        <path
          d="m31 2h2v8h-2z"
        />
        <path
          d="m12.615 9.615h2v8.001h-2z"
          transform="matrix(.707 -.707 .707 .707 -5.64 13.615)"
        />
        <path
          d="m9.615 49.385h8.001v2h-8.001z"
          transform="matrix(.707 -.707 .707 .707 -31.64 24.385)"
        />
        <path
          d="m31 54h2v8h-2z"
        />
        <path
          d="m49.385 46.385h2v8.001h-2z"
          transform="matrix(.707 -.707 .707 .707 -20.87 50.385)"
        />
        <path
          d="m46.385 12.615h8.001v2h-8.001z"
          transform="matrix(.707 -.707 .707 .707 5.13 39.615)"
        />
        <path
          d="m32 38a6 6 0 1 1 6-6 6.006 6.006 0 0 1 -6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0 -4-4z"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
  <div
    title="Critical cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 55h5a6 6 0 0 1 12 0h15v-30a4 4 0 0 0 -4-4h-28a4 4 0 0 0 -4 4v26a4 4 0 0 0 4 4zm6-21a1 1 0 0 1 1-1h4a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h4a1 1 0 0 1 1 1v2a1 1 0 0 1 -1 1h-4a1 1 0 0 0 -1 1v4a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1-1v-4a1 1 0 0 0 -1-1h-4a1 1 0 0 1 -1-1z"
        fill="#9bc9ff"
      />
      <path
        d="m39 55h5a6 6 0 0 1 12 0h3a2.006 2.006 0 0 0 2-2v-7a4 4 0 0 0 -4-4h-18z"
        fill="#9bc9ff"
      />
      <path
        d="m51.006 29.514a4 4 0 0 0 -3.714-2.514h-8.292v15h17z"
        fill="#9bc9ff"
      />
      <circle
        cx="18"
        cy="55"
        fill="#9bc9ff"
        r="2"
      />
      <circle
        cx="50"
        cy="55"
        fill="#9bc9ff"
        r="2"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m20 5h2v6h-2z"
        />
        <path
          d="m12.929 7.929h2v6h-2z"
          transform="matrix(.707 -.707 .707 .707 -3.648 13.049)"
        />
        <path
          d="m25.071 9.929h6v2h-6z"
          transform="matrix(.707 -.707 .707 .707 .494 23.05)"
        />
        <path
          d="m57 41h-.323l-4.742-11.856a4.976 4.976 0 0 0 -4.643-3.144h-7.292v-1a5.006 5.006 0 0 0 -5-5h-9v-1a5 5 0 0 0 -10 0v1h-9a5.006 5.006 0 0 0 -5 5v26a5.006 5.006 0 0 0 5 5h4.08a6.991 6.991 0 0 0 13.84 0h18.16a6.991 6.991 0 0 0 13.84 0h2.08a3 3 0 0 0 3-3v-7a5.006 5.006 0 0 0 -5-5zm-9.708-13a2.984 2.984 0 0 1 2.785 1.886l4.446 11.114h-14.523v-13zm-29.292-9a3 3 0 0 1 6 0v1h-6zm0 41a5 5 0 1 1 5-5 5.006 5.006 0 0 1 -5 5zm20-6h-13.08a6.991 6.991 0 0 0 -13.84 0h-4.08a3 3 0 0 1 -3-3v-26a3 3 0 0 1 3-3h28a3 3 0 0 1 3 3zm12 6a5 5 0 1 1 5-5 5.006 5.006 0 0 1 -5 5zm10-7a1 1 0 0 1 -1 1h-2.08a6.991 6.991 0 0 0 -13.84 0h-3.08v-11h17a3 3 0 0 1 3 3z"
        />
        <path
          d="m18 52a3 3 0 1 0 3 3 3 3 0 0 0 -3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1 -1 1z"
        />
        <path
          d="m50 52a3 3 0 1 0 3 3 3 3 0 0 0 -3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1 -1 1z"
        />
        <path
          d="m28 32h-4v-4a2 2 0 0 0 -2-2h-2a2 2 0 0 0 -2 2v4h-4a2 2 0 0 0 -2 2v2a2 2 0 0 0 2 2h4v4a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2v-4h4a2 2 0 0 0 2-2v-2a2 2 0 0 0 -2-2zm0 4h-4a2 2 0 0 0 -2 2v4h-2v-4a2 2 0 0 0 -2-2h-4v-2h4a2 2 0 0 0 2-2v-4h2v4a2 2 0 0 0 2 2h4z"
        />
        <path
          d="m41.5 31.5h5v1.999h-5z"
          transform="matrix(.8 -.6 .6 .8 -10.7 32.889)"
        />
        <path
          d="m41 34h10v1.999h-10z"
          transform="matrix(.8 -.6 .6 .8 -11.8 34.589)"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
  <div
    title="Recovered cases"
  >
    <svg
      height="512"
      viewBox="0 0 64 64"
      width="512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m56.749 42.607-10.607-10.607-14.142 14.142 10.607 10.607a10 10 0 0 0 14.142-14.142z"
        fill="#9bc9ff"
      />
      <path
        d="m21.393 7.251a10 10 0 0 0 -14.142 0 10 10 0 0 0 0 14.142l10.607 10.607 14.142-14.142z"
        fill="#9bc9ff"
      />
      <path
        d="m22 22h20v20h-20z"
        fill="#9bc9ff"
        transform="matrix(.707 -.707 .707 .707 -13.255 32)"
      />
      <g
        fill="#1e81ce"
      >
        <path
          d="m47.557 32 9.9-9.9a11 11 0 0 0 -15.557-15.556l-9.9 9.9-9.9-9.9a11 11 0 0 0 -15.556 15.556l9.9 9.9-9.9 9.9a11 11 0 0 0 15.556 15.556l9.9-9.9 9.9 9.9a11 11 0 0 0 15.556-15.556zm-4.244-24.042a9 9 0 0 1 12.729 12.729l-9.9 9.9-12.728-12.729zm-35.355 12.729a9 9 0 0 1 12.729-12.729l9.9 9.9-12.729 12.728zm12.729 35.355a9 9 0 0 1 -12.729-12.729l9.9-9.9 12.728 12.729zm-1.415-24.042 12.728-12.728 12.728 12.728-12.728 12.728zm36.77 24.042a9 9 0 0 1 -12.729 0l-9.9-9.9 12.729-12.728 9.9 9.9a9.012 9.012 0 0 1 0 12.728z"
        />
        <path
          d="m9.08 13.322h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -7.175 11.322)"
        />
        <path
          d="m13.322 9.08h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -2.932 13.08)"
        />
        <path
          d="m11.908 16.151h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -8.347 14.151)"
        />
        <path
          d="m16.151 11.908h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -4.104 15.908)"
        />
        <path
          d="m14.736 18.979h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -9.518 16.979)"
        />
        <path
          d="m18.979 14.737h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -5.276 18.737)"
        />
        <path
          d="m17.565 21.808h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -10.69 19.808)"
        />
        <path
          d="m21.808 17.565h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -6.447 21.565)"
        />
        <path
          d="m48.678 9.08h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 7.423 38.08)"
        />
        <path
          d="m52.92 13.322h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 5.665 42.322)"
        />
        <path
          d="m45.85 11.908h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 4.594 36.908)"
        />
        <path
          d="m50.092 16.151h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 2.837 41.151)"
        />
        <path
          d="m43.021 14.737h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 1.762 35.729)"
        />
        <path
          d="m47.264 18.979h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 .005 39.971)"
        />
        <path
          d="m40.192 17.565h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -1.062 34.565)"
        />
        <path
          d="m44.435 21.807h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -2.814 38.824)"
        />
        <path
          d="m17.565 40.192h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -23.69 25.192)"
        />
        <path
          d="m21.808 44.435h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -25.447 29.435)"
        />
        <path
          d="m14.737 43.021h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -26.518 24.021)"
        />
        <path
          d="m18.979 47.263h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -28.276 28.263)"
        />
        <path
          d="m11.908 45.849h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -29.347 22.849)"
        />
        <path
          d="m16.151 50.092h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -31.104 27.092)"
        />
        <path
          d="m9.08 48.678h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -32.175 21.678)"
        />
        <path
          d="m13.322 52.921h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -33.933 25.92)"
        />
        <path
          d="m40.192 44.435h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -20.062 42.435)"
        />
        <path
          d="m44.435 40.192h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -15.821 44.171)"
        />
        <path
          d="m43.02 47.264h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -21.234 45.263)"
        />
        <path
          d="m47.264 43.021h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -16.991 47.021)"
        />
        <path
          d="m45.85 50.092h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -22.405 48.092)"
        />
        <path
          d="m50.092 45.849h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -18.163 49.849)"
        />
        <path
          d="m48.678 52.921h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -23.577 50.92)"
        />
        <path
          d="m52.92 48.678h2v2h-2z"
          transform="matrix(.707 -.707 .707 .707 -19.335 52.677)"
        />
      </g>
    </svg>
    <div>
      -
    </div>
  </div>
</div>
`;
